--- a/financial_schedule/frontend/package.json
+++ b/financial_schedule/frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "v-calendar": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
